Repair hard-scan notation and preserve navigation playback state
Port reviewed global notehead, accidental, staff-phase, rest, tie, beam, tempo, annotation and navigation fixes with original synthetic regressions. Add licensed bundled glyph resources and optional JDK OCR adapters; preserve standalone API and unchanged model lineage. Source audit remains separate from automated regression coverage.